# typepractice

./: Cargo.toml  Dioxus.toml  README.md
.github/workflows/: deploy.yml
assets/: app.db  appdb.json
assets/css/: datagrid.css  misc.css  practice.css
assets/data/: practices_kong390.json  practices_semoe2018.json  wordset.list
corpus/: typing_practice_korean.py  가족_지식_그래프_목록_20260603234553.json  건축_지식_그래프_목록_20260603234614.json  경제_용어_내려받기_20260604000244.json  경제_용어_내려받기_20260604000247.json  경제_용어_내려받기_20260604000248.json  공산당 선언.txt  민간신앙_지식_그래프_목록_20260603234724.json  민속인류_지식_그래프_목록_20260603234743.json  사회계약론.txt  산업사회와 그 미래.txt  세계인권선언.txt  식생활_지식_그래프_목록_20260603234818.json  자주쓰는 한국어 단어.txt  주생활_지식_그래프_목록_20260603234327.json  철학_용어_내려받기_20260604000001.json
src/: main.rs  utils.rs
src/platform/: desktop.rs  mod.rs  web.rs
