[package]
name = "typepractice"
version = "0.1.0"
authors = ["jonathan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-desktop = "0.7.9"
dirs = "6.0.0"
euclid = "0.22.14"
rand = "0.10.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio = "1.52.3"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.release]
panic = "abort"
strip = true
lto = "thin"
opt-level = "z"