[package]
name = "typepractice"
version = "0.1.0"
authors = ["jonathan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
dioxus = { version = "0.7.1", features = ["router"] }
dirs = "6.0.0"
euclid = "0.22.14"
rand = { version = "^0.9", features = [] } # matching with dioxus'
getrandom = { version = "^0.3.4", features = [] } # matching with dioxus'
rusqlite = { version = "0.40.0", features = ["bundled"], optional = true }
tokio = "1.52.3"
dioxus-desktop = { version = "0.7.9", optional = true }
indexed_db_futures = { version = "0.6.4", features = ["serde"] } # would have been better to use gloo-storage
thiserror = "2.0.18"
serde = "1.0.228"
serde_json = "1.0.150"
web-time = { version = "1.1.0", optional = true }
gloo-timers = { version = "0.4.0", optional = true }

[features]
default = ["desktop"]
#default = ["web"]
web = ["dioxus/web", "getrandom/wasm_js", "web-time", "gloo-timers/futures"]
desktop = ["dioxus/desktop", "dioxus-desktop", "rusqlite"]
mobile = ["dioxus/mobile"]

[profile.release]
panic = "abort"
strip = true
lto = "thin"
opt-level = "z"
